--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ mypy = "^1.7.0"
 flake8 = "^6.1.0"
 flake8-pytest = "^1.4"
 flake8-isort = "^6.1.1"
+flake8-print = "^5.0.0"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
