--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,19 +11,10 @@ python = "^3.10"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.7.0"
-flake8 = "^6.1.0"
-flake8-pytest = "^1.4"
-flake8-isort = "^6.1.1"
-flake8-print = "^5.0.0"
-flake8-pyproject = "^1.2.3"
-flake8-class-attributes-order = "^0.1.3"
+ruff = "^0.1.6"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
-
-[tool.flake8]
-extend-ignore = ["I001", "I003", "I005"] 
-max-line-length = 99 
 
 [build-system]
 requires = ["poetry-core"]
