--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ pre-commit = "^3.5.0"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
 
+[tool.pytest.ini_options]
+pythonpath = "src/"
+
 [tool.ruff]
 line-length = 99
 
