--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,6 +8,7 @@ on:
   pull_request:
     types: [opened]
     paths: ["*.py"]
+  workflow_dispatch:
 
 jobs:
   test:
@@ -22,4 +23,4 @@ jobs:
       - name: install dependencies
         run: pipx install poetry && poetry install
       - name: run test
-        run: ./scripts/test.sh
+        run: poetry run ./scripts/test.sh
