--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,3 +24,20 @@ jobs:
         run: pipx install poetry && poetry install
       - name: run test
         run: poetry run ./scripts/test.sh
+  codecov:
+    needs: [test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v4
+      - name: install python3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+      - name: generate coverage report
+        run: pipx install coverage && coverage run -m pytest
+      - name: upload coverage report to Codecov
+        uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
