--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,10 +4,10 @@ run-name: testing
 on:
   push:
     branches: [main]
-    paths: ["*.py"]
+    paths: ["src/**", "tests/**"]
   pull_request:
     types: [opened]
-    paths: ["*.py"]
+    paths: ["src/**", "tests/**"]
   workflow_dispatch:
 
 jobs:
@@ -34,10 +34,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: install dependencies
+        run: pipx install poetry && poetry install
       - name: generate coverage report
-        run: pipx install coverage && pipx install pytest && coverage run -m pytest
+        run: poetry run coverage run -m pytets
       - name: upload coverage report to Codecov
         uses: codecov/codecov-action@v3
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-
