--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pre-commit = "^3.5.0"
 [tool.poetry.group.test.dependencies]
 pytest = "^7.4.3"
 coverage = "^7.3.2"
+pytest-cov = "^4.1.0"
 
 [tool.pytest.ini_options]
 pythonpath = "src/"
