Add gateways impl to tests

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,9 @@ DATABASE_POSTGRES_PASSWORD=
 DATABASE_POSTGRES_HOST=
 DATABASE_POSTGRES_PORT=
 DATABASE_POSTGRES_NAME=
+
+TEST_DATABASE_POSTGRES_USER=
+TEST_DATABASE_POSTGRES_PASSWORD=
+TEST_DATABASE_POSTGRES_HOST=
+TEST_DATABASE_POSTGRES_PORT=
+TEST_DATABASE_POSTGRES_NAME=
