--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,11 +17,9 @@ jobs:
       postgres:
         image: postgres:15-alpine
         env:
-          TEST_DATABASE_POSTGRES_USER: postgres
-          TEST_DATABASE_POSTGRES_PASSWORD: 1234
-          TEST_DATABASE_POSTGRES_HOST: postgres
-          TEST_DATABASE_POSTGRES_PORT: 5432
-          TEST_DATABASE_POSTGRES_NAME: amdb_test
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 1234
+          POSTGRES_DB: amdb_test
         ports: ["5432:5432"]
     steps:
       - name: checkout
@@ -34,6 +32,12 @@ jobs:
         run: pipx install poetry && poetry install
       - name: run test
         run: poetry run ./scripts/test.sh
+        env:
+          TEST_DATABASE_POSTGRES_USER: postgres
+          TEST_DATABASE_POSTGRES_PASSWORD: 1234
+          TEST_DATABASE_POSTGRES_HOST: postgres
+          TEST_DATABASE_POSTGRES_PORT: 5432
+          TEST_DATABASE_POSTGRES_NAME: amdb_test
   codecov:
     needs: [test]
     runs-on: ubuntu-latest
