--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -35,7 +35,7 @@ jobs:
         env:
           TEST_DATABASE_POSTGRES_USER: postgres
           TEST_DATABASE_POSTGRES_PASSWORD: 1234
-          TEST_DATABASE_POSTGRES_HOST: postgres
+          TEST_DATABASE_POSTGRES_HOST: 127.0.0.1
           TEST_DATABASE_POSTGRES_PORT: 5432
           TEST_DATABASE_POSTGRES_NAME: amdb_test
   codecov:
