--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pre-commit = "^3.5.0"
 pytest = "^7.4.3"
 coverage = "^7.3.2"
 pytest-cov = "^4.1.0"
+pytest-clarity = "^1.0.1"
 polyfactory = "^2.13.0"
 
 [tool.pytest.ini_options]
