--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "ruff==0.1.9",
     "coverage[toml]>=6.5",
     "pytest",
+    "pre-commit==3.5.0",
 ]
 
 [tool.hatch.envs.dev.scripts]
