Add `docker-compose.yaml`, update `.env.template`

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,23 @@ TEST_DATABASE_PG_PASSWORD=
 TEST_DATABASE_PG_NAME=
 TEST_DATABASE_PG_HOST=
 TEST_DATABASE_PG_PORT=
+
+DATABASE_PG_USER=
+DATABASE_PG_PASSWORD=
+DATABASE_PG_NAME=
+DATABASE_PG_HOST=
+DATABASE_PG_PORT=
+
+FASTAPI_TITLE="AMDB API"
+FASTAPI_SUMMARY="Awesome Movie Database Backend API"
+FASTAPI_DESCRIPTION="Awesome Movie Database Backend API"
+FASTAPI_VERSION="0.0.1"
+
+UVICORN_HOST=
+UVICORN_PORT=
+
+SESSION_IDENTITY_PROVIDER_REDIS_HOST=
+SESSION_IDENTITY_PROVIDER_REDIS_PORT=
+SESSION_IDENTITY_PROVIDER_REDIS_DB=
+SESSION_IDENTITY_PROVIDER_REDIS_PASSWORD=
+SESSION_IDENTITY_PROVIDER_SESSION_LIFETIME=  # Minutes
