Add env vars in docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,26 @@ services:
         networks:
             - amdb_backend.postgres.network
             - amdb_backend.redis.network
+        environment:
+            - DATABASE_PG_USER=${DATABASE_PG_USER}
+            - DATABASE_PG_PASSWORD=${DATABASE_PG_PASSWORD}
+            - DATABASE_PG_NAME=${DATABASE_PG_NAME}
+            - DATABASE_PG_HOST=${DATABASE_PG_HOST}
+            - DATABASE_PG_PORT=${DATABASE_PG_PORT}
+
+            - FASTAPI_TITLE=${FASTAPI_TITLE}
+            - FASTAPI_SUMMARY=${FASTAPI_SUMMARY}
+            - FASTAPI_DESCRIPTION=${FASTAPI_DESCRIPTION}
+            - FASTAPI_VERSION=${FASTAPI_VERSION}
+
+            - UVICORN_HOST=${UVICORN_HOST}
+            - UVICORN_PORT=${UVICORN_PORT}
+
+            - SESSION_IDENTITY_PROVIDER_REDIS_HOST=${SESSION_IDENTITY_PROVIDER_REDIS_HOST}
+            - SESSION_IDENTITY_PROVIDER_REDIS_PORT=${SESSION_IDENTITY_PROVIDER_REDIS_PORT}
+            - SESSION_IDENTITY_PROVIDER_REDIS_DB=${SESSION_IDENTITY_PROVIDER_REDIS_DB}
+            - SESSION_IDENTITY_PROVIDER_REDIS_PASSWORD=${SESSION_IDENTITY_PROVIDER_REDIS_PASSWORD}
+            - SESSION_IDENTITY_PROVIDER_SESSION_LIFETIME=${SESSION_IDENTITY_PROVIDER_SESSION_LIFETIME}
 
     postgres:
         profiles: [web_api]
