--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,7 +5,7 @@ services:
         profiles: [web_api]
         container_name: amdb_backend.web_api
         depends_on: [postgres, redis]
-        ports: [127.0.0.1:8000:8000]
+        ports: ["${UVICORN_HOST}:${UVICORN_PORT}:${UVICORN_PORT}"]
         restart: unless-stopped
 
         build:
@@ -27,7 +27,7 @@ services:
             - FASTAPI_DESCRIPTION=${FASTAPI_DESCRIPTION}
             - FASTAPI_VERSION=${FASTAPI_VERSION}
 
-            - UVICORN_HOST=${UVICORN_HOST}
+            - UVICORN_HOST=0.0.0.0
             - UVICORN_PORT=${UVICORN_PORT}
 
             - SESSION_IDENTITY_PROVIDER_REDIS_HOST=${SESSION_IDENTITY_PROVIDER_REDIS_HOST}
@@ -37,7 +37,7 @@ services:
             - SESSION_IDENTITY_PROVIDER_SESSION_LIFETIME=${SESSION_IDENTITY_PROVIDER_SESSION_LIFETIME}
 
     postgres:
-        profiles: [web_api]
+        profiles: [web_api, postgres_migration]
         container_name: amdb_backend.postgres
         image: postgres:15-alpine
         restart: unless-stopped
