--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,10 @@ dev = [
     "pre-commit==3.5.0",
 ]
 
+[project.scripts]
+amdb_cli = "amdb.main.cli.__main__:main"
+amdb_web_api = "amdb.main.web_api.__main__:main"
+
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["amdb*"]
