--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ maintainers = [
     { name = "madnoberson", email = "baseddepartmentzx77@gmail.com" },
 ]
 dependencies = [
+    "uuid7",
     "sqlalchemy==2.0.23",
     "psycopg2-binary==2.9.9",
     "alembic==1.13.0",
