Refactor infrastructure and configs

--- a/.env.template
+++ b/.env.template
@@ -1,25 +1,23 @@
-TEST_DATABASE_PG_USER=
-TEST_DATABASE_PG_PASSWORD=
-TEST_DATABASE_PG_NAME=
-TEST_DATABASE_PG_HOST=
-TEST_DATABASE_PG_PORT=
+TEST_POSTGRES_USER=
+TEST_POSTGRES_PASSWORD=
+TEST_POSTGRES_NAME=
+TEST_POSTGRES_HOST=
+TEST_POSTGRES_PORT=
 
-DATABASE_PG_USER=
-DATABASE_PG_PASSWORD=
-DATABASE_PG_NAME=
-DATABASE_PG_HOST=
-DATABASE_PG_PORT=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_NAME=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
-FASTAPI_TITLE="AMDB API"
-FASTAPI_SUMMARY="Awesome Movie Database Backend API"
-FASTAPI_DESCRIPTION="Awesome Movie Database Backend API"
-FASTAPI_VERSION="0.1.0"
+FASTAPI_VERSION=
 
 UVICORN_HOST=
 UVICORN_PORT=
 
-SESSION_IDENTITY_PROVIDER_REDIS_HOST=
-SESSION_IDENTITY_PROVIDER_REDIS_PORT=
-SESSION_IDENTITY_PROVIDER_REDIS_DB=
-SESSION_IDENTITY_PROVIDER_REDIS_PASSWORD=
-SESSION_IDENTITY_PROVIDER_SESSION_LIFETIME=  # Minutes
+REDIS_HOST=
+REDIS_PORT=
+REDIS_DB=
+REDIS_PASSWORD=
+
+SESSION_LIFETIME=  # Minutes
