Add `RedisPermissionsGateway`, refactor

--- a/.env.template
+++ b/.env.template
@@ -4,20 +4,24 @@ TEST_POSTGRES_NAME=
 TEST_POSTGRES_HOST=
 TEST_POSTGRES_PORT=
 
+TEST_REDIS_HOST=
+TEST_REDIS_PORT=
+TEST_REDIS_DB=
+
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_NAME=
 POSTGRES_HOST=
 POSTGRES_PORT=
 
-FASTAPI_VERSION=
-
-UVICORN_HOST=
-UVICORN_PORT=
-
 REDIS_HOST=
 REDIS_PORT=
 REDIS_DB=
 REDIS_PASSWORD=
+
+FASTAPI_VERSION=
+
+UVICORN_HOST=
+UVICORN_PORT=
 
 SESSION_LIFETIME=  # Minutes
