--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 TEST_POSTGRES_USER=
 TEST_POSTGRES_PASSWORD=
-TEST_POSTGRES_NAME=
+TEST_POSTGRES_DB=
 TEST_POSTGRES_HOST=
 TEST_POSTGRES_PORT=
 
@@ -10,7 +10,7 @@ TEST_REDIS_DB=
 
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_NAME=
+POSTGRES_DB=
 POSTGRES_HOST=
 POSTGRES_PORT=
 
