--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -23,7 +23,7 @@ jobs:
       - name: install dependencies
         run: pip install ".[style]"
       - name: run format
-        run: poetry run ./scripts/format.sh
+        run: ./scripts/format.sh
   lint:
     needs: [format]
     runs-on: ubuntu-latest
@@ -37,4 +37,4 @@ jobs:
       - name: install dependencies
         run: pip install ".[style]"
       - name: run lint
-        run: poetry run ./scripts/lint.sh
+        run: ./scripts/lint.sh
