--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,6 +24,11 @@ jobs:
       redis:
         image: redis:7.2
         ports: ["6379:6379"]
+        options: >-
+            --health-cmd "redis-cli ping"
+            --health-interval 10s
+            --health-timeout 5s
+            --health-retries 5
     steps:
       - name: checkout
         uses: actions/checkout@v4
