--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -21,7 +21,7 @@ jobs:
         with:
           python-version: "3.10.13"
       - name: install dependencies
-        run: pip install ".[style]"
+        run: pip install ".[dev]"
       - name: run format
         run: ./scripts/format.sh
   lint:
@@ -35,6 +35,6 @@ jobs:
         with:
           python-version: "3.10.13"
       - name: install dependencies
-        run: pip install ".[style]"
+        run: pip install ".[dev]"
       - name: run lint
         run: ./scripts/lint.sh
